reorganize docker materials, update slr merge script

--- a/Near Real Time data procedures/Vector Handling/OpenAQ.ipynb
+++ b/Near Real Time data procedures/Vector Handling/OpenAQ.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -46,6 +46,9 @@
     "from configparser import ConfigParser\n",
     "config = ConfigParser()\n",
     "config.read(\"/Users/nathansuberi/Desktop/Code Portfolio/ResourceWatchCode/.env\")\n",
+    "\n",
+    "# Logging\n",
+    "import logging\n",
     "\n",
     "# S3 connection libraries\n",
     "# Need to have environmental variables set with \"aws configure\", \n",
@@ -85,14 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "STRICT = True\n",
+    "\n",
     "# Base URL for all SQL calls\n",
-    "CARTO_URL = \"https://rw-nrt.carto.com/api/v2/sql\"\n",
+    "CARTO_USER = \"rw-nrt\"\n",
+    "\n",
+    "CARTO_URL = \"https://{}.carto.com/api/v2/sql\"\n",
     "\n",
     "# FROM: https://resourcewatch.carto.com/u/wri-rw/your_apps\n",
     "CARTO_API_TOKEN = config.get(\"auth\", \"carto_api_token_nrt\")\n",
@@ -421,6 +428,34 @@
     "###\n",
     "# Carto SQL API interacting functions\n",
     "###\n",
+    " \n",
+    "# From Francis\n",
+    "def sendSql(sql, user=CARTO_USER, key=CARTO_KEY, f='', post=True):\n",
+    "    \"\"\" \n",
+    "    Execute sql request over Carto SQL API \n",
+    "    Specifying a format will ask Carto to send results in that format, i.e. receiving data as GeoJSON\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    url = CARTO_URL.format(user)\n",
+    "    payload = {\n",
+    "        'api_key': key,\n",
+    "        'q': sql,\n",
+    "    }\n",
+    "    if len(f):\n",
+    "        payload['format'] = f\n",
+    "        \n",
+    "    logging.info((url, payload))\n",
+    "    \n",
+    "    if post:\n",
+    "        r = requests.post(url, json=payload)\n",
+    "    else:\n",
+    "        r = requests.get(url, params=payload)\n",
+    "    if not r.ok:\n",
+    "        logging.error(r.text)\n",
+    "        if STRICT:\n",
+    "            raise Exception(r.text)\n",
+    "        return False\n",
+    "    return(r.text)    \n",
     "    \n",
     "def sql_api(sql, get_or_post='get', url=CARTO_URL, key=CARTO_API_TOKEN):\n",
     "    \"\"\" Execute sql request over Carto SQL API \"\"\"\n",
@@ -479,86 +514,93 @@
     "    res = sql_api(delete_table_sql, \"post\")\n",
     "    print(res.text)\n",
     "    \n",
+    "# From Francis's nrt-test\n",
+    "def select_from_table(fields='*', table='', user=CARTO_USER, key=CARTO_KEY, where='', order='', f=''):\n",
+    "    if type(fields) == str:\n",
+    "        fields = (fields,)\n",
+    "    if len(where):\n",
+    "        where = ' WHERE {}'.format(where)\n",
+    "    if len(order):\n",
+    "        order = ' ORDER BY {}'.format(order)\n",
+    "    sql = 'SELECT {} FROM \"{}\"{}{}'.format(','.join(fields), table, where, order)\n",
+    "    return get(sql, user, key, f=f)\n",
     "    \n",
+    "# Mess\n",
+    "# def select_from_table(target_table_name, \n",
+    "#                       datetime_column=None, datetime_cutoff=None, want_data_since_cutoff=True,\n",
+    "#                       select_query_cols=None):\n",
+    "#     \"\"\"\n",
+    "#     Standard SQL statement to select from a table, \n",
+    "#     with support for a single WHERE clause \n",
+    "#     to select before or after a certain time cutoff\n",
+    "#     \"\"\"\n",
     "    \n",
-    "###\n",
-    "## TEMPORARY - this is a mess\n",
-    "###\n",
-    "def select_from_table(target_table_name, \n",
-    "                      datetime_column=None, datetime_cutoff=None, want_data_since_cutoff=True,\n",
-    "                      select_query_cols=None):\n",
-    "    \"\"\"\n",
-    "    Standard SQL statement to select from a table, \n",
-    "    with support for a single WHERE clause \n",
-    "    to select before or after a certain time cutoff\n",
-    "    \"\"\"\n",
+    "#     # If a datetime_cutoff are provided, a datetime_column must also be\n",
+    "#     # The datetime_column and datetime_cutoff should both be single strings\n",
+    "#     if(datetime_cutoff):\n",
+    "#         assert(datetime_column and datetime_cutoff)\n",
+    "#         assert(type(datetime_cutoff)==str)\n",
+    "#         if(datetime_column):\n",
+    "#             assert(type(datetime_column)==str) \n",
     "    \n",
-    "    # If a datetime_cutoff are provided, a datetime_column must also be\n",
-    "    # The datetime_column and datetime_cutoff should both be single strings\n",
-    "    if(datetime_cutoff):\n",
-    "        assert(datetime_column and datetime_cutoff)\n",
-    "        assert(type(datetime_cutoff)==str)\n",
-    "        if(datetime_column):\n",
-    "            assert(type(datetime_column)==str) \n",
-    "    \n",
-    "    # If no datetime_cutoff, select all from the target_table\n",
-    "    if not datetime_cutoff:\n",
+    "#     # If no datetime_cutoff, select all from the target_table\n",
+    "#     if not datetime_cutoff:\n",
     "        \n",
-    "        if select_query_cols:\n",
-    "            # Need to clean the list to be in appropriate format for SQL\n",
-    "            clean_select_query_cols = str(select_query_cols).replace(\"[\", \"\").replace(\"]\", \"\")\n",
-    "            selection= clean_select_query_cols\n",
-    "        else:\n",
-    "            selection='*'\n",
+    "#         if select_query_cols:\n",
+    "#             # Need to clean the list to be in appropriate format for SQL\n",
+    "#             clean_select_query_cols = str(select_query_cols).replace(\"[\", \"\").replace(\"]\", \"\")\n",
+    "#             selection= clean_select_query_cols\n",
+    "#         else:\n",
+    "#             selection='*'\n",
     "            \n",
-    "        select_all_sql = \"\"\"\n",
-    "        SELECT {selection} FROM {table_name}\n",
-    "        \"\"\".format(table_name=target_table_name, selection=selection).replace(\"'\",\"\")\n",
-    "        ###\n",
-    "        ## Temporary\n",
-    "        #print(select_all_sql)\n",
-    "        ### \n",
+    "#         select_all_sql = \"\"\"\n",
+    "#         SELECT {selection} FROM {table_name}\n",
+    "#         \"\"\".format(table_name=target_table_name, selection=selection).replace(\"'\",\"\")\n",
+    "#         ###\n",
+    "#         ## Temporary\n",
+    "#         #print(select_all_sql)\n",
+    "#         ### \n",
     "        \n",
-    "        res = sql_api(select_all_sql, \"get\")\n",
+    "#         res = sql_api(select_all_sql, \"get\")\n",
     "        \n",
-    "        ###\n",
-    "        ## Temporary\n",
-    "        #print(res.text)\n",
-    "        ### \n",
+    "#         ###\n",
+    "#         ## Temporary\n",
+    "#         #print(res.text)\n",
+    "#         ### \n",
     "        \n",
-    "        return(res)\n",
+    "#         return(res)\n",
     "    \n",
-    "    # If there is a datetime_cutoff, \n",
-    "    # either take the data since that date or previous to that date\n",
-    "    else:\n",
-    "        # want_data_since_cutoff should be a boolean\n",
-    "        assert(type(want_data_since_cutoff)==bool)\n",
+    "#     # If there is a datetime_cutoff, \n",
+    "#     # either take the data since that date or previous to that date\n",
+    "#     else:\n",
+    "#         # want_data_since_cutoff should be a boolean\n",
+    "#         assert(type(want_data_since_cutoff)==bool)\n",
     "        \n",
-    "        if want_data_since_cutoff:\n",
-    "            comparison_operator = \"<=\"\n",
-    "        else:\n",
-    "            comparison_operator = \">=\"\n",
+    "#         if want_data_since_cutoff:\n",
+    "#             comparison_operator = \"<=\"\n",
+    "#         else:\n",
+    "#             comparison_operator = \">=\"\n",
     "            \n",
-    "        ## TO DO    \n",
-    "        ### SELECT JUST DATETIME COLUMN AND THE UNIQUE ID COLUMN    \n",
-    "        ## \n",
+    "#         ## TO DO    \n",
+    "#         ### SELECT JUST DATETIME COLUMN AND THE UNIQUE ID COLUMN    \n",
+    "#         ## \n",
     "        \n",
-    "        if select_query_cols:\n",
-    "            clean_select_query_cols = str(select_query_cols).replace(\"[\", \"\").replace(\"]\", \"\")\n",
-    "            selection= clean_select_query_cols\n",
-    "        else:\n",
-    "            selection=\"*\"\n",
+    "#         if select_query_cols:\n",
+    "#             clean_select_query_cols = str(select_query_cols).replace(\"[\", \"\").replace(\"]\", \"\")\n",
+    "#             selection= clean_select_query_cols\n",
+    "#         else:\n",
+    "#             selection=\"*\"\n",
     "        \n",
-    "        select_all_sql = \"\"\"\n",
-    "        SELECT {selection} FROM {table_name} WHERE {datetime_column} {comparison_operator} {datetime_cutoff}\n",
-    "        \"\"\".format(table_name=target_table_name, \n",
-    "                   datetime_column=datetime_column,\n",
-    "                   comparison_operator=comparison_operator,\n",
-    "                   datetime_cutoff=datetime_cutoff,\n",
-    "                   selection=selection)\n",
+    "#         select_all_sql = \"\"\"\n",
+    "#         SELECT {selection} FROM {table_name} WHERE {datetime_column} {comparison_operator} {datetime_cutoff}\n",
+    "#         \"\"\".format(table_name=target_table_name, \n",
+    "#                    datetime_column=datetime_column,\n",
+    "#                    comparison_operator=comparison_operator,\n",
+    "#                    datetime_cutoff=datetime_cutoff,\n",
+    "#                    selection=selection)\n",
     "        \n",
-    "        res = sql_api(select_all_sql, \"get\")\n",
-    "        return(res)\n",
+    "#         res = sql_api(select_all_sql, \"get\")\n",
+    "#         return(res)\n",
     "        \n",
     "def insert_into_table(data_df, target_table_name, column_names, cols_and_types):\n",
     "    \"\"\"Craft insert statement for Carto table\"\"\"\n",
@@ -584,8 +626,9 @@
     "    This will be used to assess whether old rows need to be deleted to accomodate new content\n",
     "    \"\"\"\n",
     "    \n",
+    "    # This may fail if the string 's are included\n",
     "    assess_count_sql = \"\"\"\n",
-    "    SELECT count(id_col) FROM {table_name}\n",
+    "    SELECT count({id_col}) FROM {table_name}\n",
     "    \"\"\".format(table_name=target_table_name, id_col=id_col)\n",
     "\n",
     "    res = sql_api(insert_value_sql, \"get\")\n",
@@ -613,6 +656,7 @@
     "    df = df.loc[keep_geotagged]\n",
     "    return(df)\n",
     "\n",
+    "## This may not be necessary\n",
     "def fix_precision_of_floats(df, float_columns, precision):\n",
     "    \"\"\"Use this to address problem of comparing numpy floats with rounding errors\"\"\"\n",
     "    df = df.copy()\n",
