--- a/Notebooks for Exploring Specific Datasets/Sea Level Rise Merging.ipynb
+++ b/Notebooks for Exploring Specific Datasets/Sea Level Rise Merging.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -23,23 +23,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "(256, 256)\n",
-      "10\n",
-      "((0, 256), (0, 256)) (0, 0)\n",
-      "[[0 0 0 ..., 0 0 0]\n",
-      " [0 0 0 ..., 0 0 0]\n",
-      " [0 0 0 ..., 0 0 0]\n",
-      " ..., \n",
-      " [0 0 0 ..., 0 0 0]\n",
-      " [0 0 0 ..., 0 0 0]\n",
-      " [0 0 0 ..., 0 0 0]]\n",
       "{'driver': 'GTiff', 'dtype': 'uint8', 'nodata': 0.0, 'width': 432360, 'height': 140517, 'count': 10, 'crs': CRS({'init': 'epsg:4326'}), 'transform': Affine(0.000832639467111, 0.0, -180.0,\n",
-      "       0.0, -0.000832639467111, 61.0), 'blockxsize': 256, 'blockysize': 256, 'tiled': True, 'compress': 'lzw', 'interleave': 'pixel'}\n"
+      "       0.0, -0.000832639467111, 61.0), 'blockxsize': 256, 'blockysize': 256, 'tiled': True, 'compress': 'lzw', 'interleave': 'pixel'}\n",
+      "num_rows: 548\n",
+      "num_cols: 1688\n",
+      "(0, 0)\n",
+      "256\n"
      ]
     }
    ],
    "source": [
+    "import rasterio as rio\n",
+    "import numpy as np\n",
+    "\n",
     "merged_cc_data = \"merged_cc_data.tif\"\n",
     "\n",
     "with rio.open(\"https://wri-public-data.s3.amazonaws.com/resourcewatch/raster/cli_024_sea_level_rise/cli_024_sea_level_rise_ft.tif\", \"r\") as src:\n",
@@ -58,19 +54,34 @@
     "        num_bands = profile[\"count\"]\n",
     "        blockx = profile[\"blockxsize\"]\n",
     "        blocky = profile[\"blockysize\"]\n",
+    "        \n",
+    "        height = profile[\"height\"]\n",
+    "        width = profile[\"width\"]\n",
+    "        \n",
+    "        num_rows = int(height/blocky)\n",
+    "        num_cols = int(width/blockx)\n",
+    "        \n",
+    "        print(\"num_rows:\", num_rows)\n",
+    "        print(\"num_cols:\", num_cols)\n",
+    "        \n",
     "        dtype = profile[\"dtype\"]\n",
     "        \n",
     "        windows = src.block_windows()\n",
+    "        \n",
     "        for win_ix, window in windows:\n",
     "            \n",
-    "            merged_data = np.zeros((blockx,blocky), dtype=dtype)\n",
+    "            print(win_ix)\n",
+    "\n",
+    "            x = window[0][1] - window[0][0]\n",
+    "            y = window[1][1] - window[1][0]\n",
+    "            merged_data = np.zeros((x,y), dtype=dtype)\n",
     "            \n",
     "            for bnd in range(num_bands, 0, -1):\n",
-    "                print(\"Copying data from band\", bnd)\n",
     "                data = src.read(indexes=bnd, window=window)\n",
     "                merged_data[data==1] = bnd\n",
     "\n",
-    "            dst.write(merged_data, indexes=1, window=window)"
+    "            dst.write(merged_data, indexes=1, window=window)\n",
+    "            "
    ]
   },
   {
