removing tif files from git add... demo applying carto utilities to WB data

--- a/Metadata Management/Upload Metadata to API.ipynb
+++ b/Metadata Management/Upload Metadata to API.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
        "['c', 'a', None, 'd']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Investigating dropped metadata\n",
+    "\n",
+    "qc = pd.read_csv(\"/Users/nathansuberi/Desktop/RW_Data/Metadata for Upload - QC Ready Metadata.csv\", index_col=[0]).reset_index().set_index(\"Unique ID\")\n",
+    "later = pd.read_csv(\"/Users/nathansuberi/Desktop/RW_Data/Metadata for Upload - Metadata for later.csv\", index_col=[0])\n",
+    "dropped = pd.read_csv(\"/Users/nathansuberi/Desktop/RW_Data/Metadata for Upload - Updated metadata 12-07.csv\", index_col=[0])\n",
+    "\n",
+    "dropped_ix = dropped.index\n",
+    "later_ix = later.index\n",
+    "qc_ix = qc.index\n",
+    "\n",
+    "qc_in_dropped = [ix for ix in qc_ix if ix in dropped_ix]\n",
+    "later_in_dropped = [ix for ix in later_ix if ix in dropped_ix]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "272\n",
+      "38\n",
+      "197\n",
+      "20\n",
+      "197\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(dropped_ix))\n",
+    "print(len(later_ix))\n",
+    "print(len(qc_ix))\n",
+    "print(len(later_in_dropped))\n",
+    "print(len(qc_in_dropped))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Public Title', 'Technical Title', 'Subtitle', 'Source Organizations',\n",
+       "       'Learn More Link', 'Function', 'Description', 'Cautions',\n",
+       "       'Geographic Coverage', 'Data Type', 'Spatial Resolution',\n",
+       "       'Date of Content', 'Frequency of Updates', 'Summary of Licence',\n",
+       "       'Link to License', 'Citation', 'Published Language',\n",
+       "       'Published Title (if not English)', 'Download', 'Download from Source',\n",
+       "       'Layer Name 1', 'Layer Definition 1', 'Layer Name 2',\n",
+       "       'Layer Definition 2', 'Layer Name 3', 'Layer Definition 3',\n",
+       "       'Layer Name 4', 'Layer Definition 4', 'Original Data Name 1',\n",
+       "       'Original Data Link 1', 'Original Data Name 2', 'Original Data Link 2',\n",
+       "       'Original Data Name 3', 'Original Data Link 3', 'Original Data Name 4',\n",
+       "       'Original Data Link 4', 'Unnamed: 37'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dropped.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_to_add_to_qc = dropped.drop(qc_in_dropped+later_in_dropped)\n",
+    "missing_cols = [col for col in qc.columns if col not in data_to_add_to_qc.columns]\n",
+    "missing_cols\n",
+    "\n",
+    "#for col in missing_cols:\n",
+    "#    data_to_add_to_qc[col] = None\n",
+    "\n",
+    "#### Transfer info from the Tracking sheet to the Metadata sheet\n",
+    "id_col = \"API_ID\"\n",
+    "dl_from_src_col = \"Download from Source\"\n",
+    "dl_from_s3_col = \"Download Data (S3)\"\n",
+    "public_title = \"Public Title\"\n",
+    "technical_title = \"Technical Title\"\n",
+    "distribution_restriction = \"Distribution Restriction\"\n",
+    "shared_api = \"Shared API - Do Not Touch These!\"\n",
+    "\n",
+    "columns_to_xfer = [id_col, \n",
+    "                   dl_from_src_col, dl_from_s3_col, \n",
+    "                   public_title, technical_title, \n",
+    "                   distribution_restriction, shared_api]\n",
+    "\n",
+    "current_mdata = transfer_columns_between_tables(dropped, data_to_add_to_qc, columns_to_xfer)\n",
+    "current_mdata[\"final_ids\"] = current_mdata[id_col]\n",
+    "current_mdata = current_mdata[qc.columns]\n",
+    "\n",
+    "current_mdata.to_csv(\"/Users/nathansuberi/Desktop/RW_Data/Adding_back_in_missed_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -190,11 +309,11 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 97284    0 97284    0     0   398k      0 --:--:-- --:--:-- --:--:--  399k\n",
+      "100 98079    0 98079    0     0   234k      0 --:--:-- --:--:-- --:--:--  235k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  745k    0  745k    0     0  1900k      0 --:--:-- --:--:-- --:--:-- 1895k\n",
-      "These cause an error: [(2, '???'), (12, 'bio.010'), (18, 'bio.016'), (36, 'cit.007'), (79, 'com.003'), (96, 'com.027'), (103, 'dis.006'), (107, 'dis.010'), (110, 'ene.002'), (112, 'ene.004'), (117, 'ene.009'), (121, 'ene.016'), (129, 'foo.002'), (134, 'foo.007'), (176, 'for.011'), (185, 'for.020b'), (200, 'soc.011'), (226, 'soc.042'), (229, 'soc.046'), (236, 'soc.060')]\n"
+      "100  568k    0  568k    0     0  1518k      0 --:--:-- --:--:-- --:--:-- 1515k\n",
+      "These cause an error: []\n"
      ]
     }
    ],
@@ -223,7 +342,10 @@
     "#### Check for entries that will break the transfer\n",
     "unmatched = investigate_unmatched(tracking_sheet, current_mdata)\n",
     "print(\"These cause an error: \" + str(unmatched))\n",
-    "_, drop_ixs = zip(*unmatched)\n",
+    "try:\n",
+    "    _, drop_ixs = zip(*unmatched)\n",
+    "except:\n",
+    "    drop_ixs=[]\n",
     "\n",
     "# Remove the metadata that is not in the tracking sheet, set aside\n",
     "# Need to cast as a list, or else assumes the second item in the list is a column identifier\n",
@@ -254,7 +376,9 @@
     "current_mdata[\"final_ids\"] = current_mdata[id_col]\n",
     "ids_on_backoffice = pd.notnull(current_mdata[\"final_ids\"])\n",
     "mdata_for_ids_on_backoffice = current_mdata.loc[ids_on_backoffice]\n",
-    "mdata_for_ids_on_backoffice = mdata_for_ids_on_backoffice.reset_index().set_index(\"final_ids\")\n",
+    "\n",
+    "# Should have used this:\n",
+    "# mdata_for_ids_on_backoffice = mdata_for_ids_on_backoffice.reset_index().set_index(\"final_ids\")\n",
     "\n",
     "# Save the updated metadata\n",
     "mdata_for_ids_on_backoffice.to_csv(\"/Users/nathansuberi/Desktop/RW_Data/mdata_for_ids_on_backoffice.csv\")"
@@ -298,7 +422,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
