improving utilities, finishign wb

--- a/Utilities/Miscellaneous helper functions.ipynb
+++ b/Utilities/Miscellaneous helper functions.ipynb
@@ -12,22 +12,29 @@
     "\n",
     "\n",
     "# Fixing datetimes from various formats\n",
-    "def fix_datetime_UTC(data_df, date_columns=[], date_pattern=[]):\n",
+    "# https://stackoverflow.com/questions/466345/converting-string-into-datetime\n",
+    "# https://docs.python.org/3/library/datetime.html#datetime.datetime.strptime\n",
+    "def fix_datetime_UTC(data_df, date_columns=[], date_pattern=\"%Y-%m-%dT%H:%M:%SZ\"):\n",
     "    \"\"\"\n",
     "    Desired datetime format: 2017-12-08T15:16:03Z\n",
-    "    Desired date_pattern: %Y-\n",
-    "    date_columns, if a list, should be listed in order\n",
-    "    date_pattern, if a list, should be of the same length as date_columns\n",
+    "    Corresponding date_pattern for strftime: %Y-%m-%dT%H:%M:%SZ\n",
+    "    \n",
+    "    Depends on:\n",
+    "    from dateutil import parser\n",
     "    \"\"\"\n",
-    "    num_columns = len(columns)\n",
     "    \n",
-    "    # https://stackoverflow.com/questions/466345/converting-string-into-datetime\n",
-    "    # https://docs.python.org/3/library/datetime.html#datetime.datetime.strptime\n",
-    "    datetime_object = datetime.strptime('Jun 1 2005  1:33PM', '%b %d %Y %I:%M%p')\n",
+    "    assert((type(date_columns)==str) | (type(date_columns)==list))\n",
+    "    if type(date_columns)==str:\n",
+    "        date_columns = [date_columns]\n",
+    "        \n",
+    "    date_expression = data_df[date_columns[0]].astype(str)\n",
+    "    for col in date_columns[1:]:\n",
+    "        date_expression = date_expression + \" \" + data_df[col].astype(str)\n",
     "    \n",
-    "    # Or can use dateutil.parser\n",
-    "    #from dateutil import parser\n",
-    "    dt = parser.parse(\"Aug 28 1999 12:00AM\")\n",
+    "    # Need to provide the default parameter to parser.parse so that missing entries don't default to current date\n",
+    "    date_col = date_expression.apply(lambda date: parser.parse(date, default=parser.parse(\"January 1 1900 00:00:00\")).strftime(date_pattern))\n",
+    "    \n",
+    "    return(date_col)\n",
     "\n",
     "def transfer_columns_between_tables(src_df, dst_df, columns_to_xfer=None):\n",
     "    \"\"\"\n",
