improve working with Dates function

--- a/Utilities/Working with Dates.ipynb
+++ b/Utilities/Working with Dates.ipynb
@@ -124,35 +124,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def structure_date_from_parts(dttm, date_elems, datetime_pattern):\n",
-    "    dt = datetime.datetime(year=int(dttm[date_elems[\"year_col\"]]), \n",
-    "                           month=int(dttm[date_elems[\"month_col\"]]),\n",
-    "                           day=int(dttm[date_elems[\"day_col\"]]))\n",
-    "    if \"hour_col\" in date_elems:\n",
-    "        dt = dt.replace(hour=int(dttm[date_elems[\"hour_col\"]]))\n",
-    "    if \"min_col\" in date_elems:\n",
-    "        dt = dt.replace(minute=int(dttm[date_elems[\"min_col\"]]))\n",
-    "    if \"sec_col\" in date_elems:\n",
-    "        dt = dt.replace(second=int(dttm[date_elems[\"sec_col\"]]))\n",
-    "    if \"milli_col\" in date_elems:\n",
-    "        dt = dt.replace(milliseconds=int(dttm[date_elems[\"milli_col\"]]))\n",
-    "    if \"micro_col\" in date_elems:\n",
-    "        dt = dt.replace(microseconds=int(dttm[date_elems[\"micro_col\"]]))\n",
-    "    if \"tzinfo_col\" in date_elems:\n",
-    "        dt = dt.replace(microseconds=int(dttm[date_elems[\"micro_col\"]]))\n",
+    "def structure_date_from_parts(row, ix, dttm_elems, dttm_pattern):\n",
+    "    dt = datetime.datetime(year=int(row[dttm_elems[\"year_col\"]]), \n",
+    "                           month=int(row[dttm_elems[\"month_col\"]]),\n",
+    "                           day=int(row[dttm_elems[\"day_col\"]]))\n",
+    "    if \"hour_col\" in dttm_elems:\n",
+    "        dt = dt.replace(hour=int(row[dttm_elems[\"hour_col\"]]))\n",
+    "    if \"min_col\" in dttm_elems:\n",
+    "        dt = dt.replace(minute=int(row[dttm_elems[\"min_col\"]]))\n",
+    "    if \"sec_col\" in dttm_elems:\n",
+    "        dt = dt.replace(second=int(row[dttm_elems[\"sec_col\"]]))\n",
+    "    if \"milli_col\" in dttm_elems:\n",
+    "        dt = dt.replace(milliseconds=int(row[dttm_elems[\"milli_col\"]]))\n",
+    "    if \"micro_col\" in dttm_elems:\n",
+    "        dt = dt.replace(microseconds=int(row[dttm_elems[\"micro_col\"]]))\n",
+    "    if \"tzinfo_col\" in dttm_elems:\n",
+    "        dt = dt.replace(microseconds=int(row[dttm_elems[\"micro_col\"]]))\n",
     "    \n",
-    "    dt_str = dt.strftime(date_pattern)\n",
+    "    dttm_str = dt.strftime(dttm_pattern)\n",
+    "    return(dttm_str)\n",
     "\n",
-    "def fix_datetime_UTC(data_df, date_elems_in_sep_columns=True, \n",
-    "                     date_elems={},\n",
-    "                     datetime_col=None, \n",
-    "                     date_pattern=\"%Y-%m-%dT%H:%M:%SZ\"):\n",
+    "def fix_datetime_UTC(data_df, dttm_elems_in_sep_columns=True, \n",
+    "                     dttm_elems={},\n",
+    "                     dttm_col=None, \n",
+    "                     dttm_pattern=\"%Y-%m-%dT%H:%M:%SZ\"):\n",
     "    \"\"\"\n",
     "    Desired datetime format: 2017-12-08T15:16:03Z\n",
     "    Corresponding date_pattern for strftime: %Y-%m-%dT%H:%M:%SZ\n",
@@ -165,6 +166,7 @@
     "    * min_col\n",
     "    * sec_col\n",
     "    * milli_col\n",
+    "    * micro_col\n",
     "    * tz_col\n",
     "    \n",
     "    Depends on:\n",
@@ -174,71 +176,134 @@
     "        \n",
     "    # Mutually exclusive to provide broken down datetime factors, \n",
     "    # and either a date, time, or datetime object\n",
-    "    if date_elems_in_sep_columns:\n",
-    "        assert(type(date_elems)==dict)\n",
-    "        assert(all([col in list(date_elems.keys()) for col in[\"year_col\", \"month_col\", \"day_col\"]]))\n",
-    "        assert(datetime_col==None)\n",
+    "    if dttm_elems_in_sep_columns:\n",
+    "        assert(type(dttm_elems)==dict)\n",
+    "        #assert(all([col in list(dttm_elems.keys()) for col in [\"year_col\", \"month_col\", \"day_col\"]]))\n",
+    "        assert(dttm_col==None)\n",
     "        \n",
-    "        date_col = date_expression.apply(lambda date: structure_date_from_parts(date, date_elems, datetime_pattern))\n",
-    "\n",
-    "\n",
+    "        tmp = data_df.copy()\n",
+    "        if \"year_col\" not in dttm_elems:\n",
+    "            dttm_elems[\"year_col\"] = \"year_tmp\"\n",
+    "        if dttm_elems[\"year_col\"] not in tmp.columns:\n",
+    "            tmp[dttm_elems[\"year_col\"]] = 1990\n",
+    "            \n",
+    "        if \"month_col\" not in dttm_elems:\n",
+    "            dttm_elems[\"month_col\"] = \"month_tmp\"\n",
+    "        if dttm_elems[\"month_col\"] not in tmp.columns:\n",
+    "            tmp[dttm_elems[\"month_col\"]] = 1\n",
+    "            \n",
+    "        if \"day_col\" not in dttm_elems:\n",
+    "            dttm_elems[\"day_col\"] = \"day_tmp\"\n",
+    "        if dttm_elems[\"day_col\"] not in tmp.columns:\n",
+    "            tmp[dttm_elems[\"day_col\"]] = 1\n",
     "        \n",
+    "        dttm_col = tmp.apply(lambda row: structure_date_from_parts(row, row.name, dttm_elems, dttm_pattern), axis=1)\n",
     "        \n",
     "    else:\n",
-    "        factor_cols = [factor for factor in [date_col, time_col] if factor]\n",
-    "        if len(factor_cols):\n",
-    "            assert(datetime_col==None)\n",
-    "        else:\n",
-    "            factor_cols = [datetime_col]\n",
+    "        # Need to provide the default parameter to parser.parse so that missing entries don't default to current date\n",
+    "        dttm_col = data_df.apply(lambda row: parser.parse(row[dttm_col], default=default_date).strftime(dttm_pattern), axis=1)\n",
     "    \n",
-    "    date_expression = data_df[factor_cols[0]].astype(str)\n",
-    "    for col in factor_cols[1:]:\n",
-    "        date_expression = date_expression + \" \" + data_df[col].astype(str)\n",
-    "        \n",
-    "    # Need to provide the default parameter to parser.parse so that missing entries don't default to current date\n",
-    "    date_col = date_expression.apply(lambda date: parser.parse(date, default=default_date).strftime(date_pattern))\n",
-    "    \n",
-    "    return(date_col)"
+    "    return(dttm_col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "an integer is required (got type datetime.datetime)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-60-523fe2f339c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1990\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"02\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mday\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhour\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mminute\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1990\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmonth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"02\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mday\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhour\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: an integer is required (got type datetime.datetime)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1990-02-10 02:10:10\n",
+      "1990-02-10 00:00:00\n"
      ]
     }
    ],
    "source": [
-    "datetime.datetime(year=1990, month=int(\"02\"), day=10, hour=2, minute=10, second=10)\n",
-    "dt = datetime.datetime(year=1990, month=int(\"02\"), day=10)\n"
+    "print(datetime.datetime(year=1990, month=int(\"02\"), day=10, hour=2, minute=10, second=10))\n",
+    "dt = datetime.datetime(year=1990, month=int(\"02\"), day=10)\n",
+    "print(dt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1992</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Day  Month  Year\n",
+       "0   12      1  1990\n",
+       "1   10      2  1991\n",
+       "2    4      3  1992"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.DataFrame({\"Year\":[1990, 1991, 1992], \"Month\":[1,2,3], \"Day\":[12,10,4]})"
+    "df = pd.DataFrame({\"Year\":[1990, 1991, 1992], \"Month\":[1,2,3], \"Day\":[12,10,4]})\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -250,23 +315,30 @@
       "0    1990-01-01T00:00:00Z\n",
       "1    1991-01-01T00:00:00Z\n",
       "2    1992-01-01T00:00:00Z\n",
-      "Name: Year, dtype: object\n",
-      "0    1900-01-01T00:00:00Z\n",
-      "1    1900-01-02T00:00:00Z\n",
-      "2    1900-01-03T00:00:00Z\n",
-      "Name: Month, dtype: object\n",
-      "0    1900-01-13T00:00:00Z\n",
-      "1    1900-01-10T00:00:00Z\n",
-      "2    1900-01-04T00:00:00Z\n",
-      "Name: Day, dtype: object\n"
+      "dtype: object\n",
+      "0    1990-01-01T00:00:00Z\n",
+      "1    1990-02-01T00:00:00Z\n",
+      "2    1990-03-01T00:00:00Z\n",
+      "dtype: object\n",
+      "0    1990-01-12T00:00:00Z\n",
+      "1    1990-01-10T00:00:00Z\n",
+      "2    1990-01-04T00:00:00Z\n",
+      "dtype: object\n",
+      "0    1990-01-12T00:00:00Z\n",
+      "1    1991-02-10T00:00:00Z\n",
+      "2    1992-03-04T00:00:00Z\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
     "# When can this go wrong?\n",
-    "print(fix_datetime_UTC(df, year_col=\"Year\"))\n",
-    "print(fix_datetime_UTC(df, month_col=\"Month\"))\n",
-    "print(fix_datetime_UTC(df, day_col=\"Day\"))"
+    "print(fix_datetime_UTC(df, dttm_elems={\"year_col\":\"Year\"}))\n",
+    "print(fix_datetime_UTC(df, dttm_elems={\"month_col\":\"Month\"}))\n",
+    "print(fix_datetime_UTC(df, dttm_elems={\"day_col\":\"Day\"}))\n",
+    "print(fix_datetime_UTC(df, dttm_elems={\"year_col\":\"Year\",\n",
+    "                                       \"month_col\":\"Month\",\n",
+    "                                       \"day_col\":\"Day\"}))"
    ]
   },
   {
