update wb dttm standardization function

--- a/Utilities/Working with Dates.ipynb
+++ b/Utilities/Working with Dates.ipynb
@@ -130,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "def structure_date_from_parts(row, ix, dttm_elems, dttm_pattern):\n",
+    "def structure_dttm_from_parts(row, dttm_elems, dttm_pattern):\n",
     "    dt = datetime.datetime(year=int(row[dttm_elems[\"year_col\"]]), \n",
     "                           month=int(row[dttm_elems[\"month_col\"]]),\n",
     "                           day=int(row[dttm_elems[\"day_col\"]]))\n",
@@ -145,7 +145,8 @@
     "    if \"micro_col\" in dttm_elems:\n",
     "        dt = dt.replace(microseconds=int(row[dttm_elems[\"micro_col\"]]))\n",
     "    if \"tzinfo_col\" in dttm_elems:\n",
-    "        dt = dt.replace(microseconds=int(row[dttm_elems[\"micro_col\"]]))\n",
+    "        timezone = pytz.timezone(row[dttm_elems[\"tzinfo_col\"]])\n",
+    "        dt = timezone.localize(dt)\n",
     "    \n",
     "    dttm_str = dt.strftime(dttm_pattern)\n",
     "    return(dttm_str)\n",
@@ -178,7 +179,6 @@
     "    # and either a date, time, or datetime object\n",
     "    if dttm_elems_in_sep_columns:\n",
     "        assert(type(dttm_elems)==dict)\n",
-    "        #assert(all([col in list(dttm_elems.keys()) for col in [\"year_col\", \"month_col\", \"day_col\"]]))\n",
     "        assert(dttm_col==None)\n",
     "        \n",
     "        tmp = data_df.copy()\n",
@@ -197,7 +197,7 @@
     "        if dttm_elems[\"day_col\"] not in tmp.columns:\n",
     "            tmp[dttm_elems[\"day_col\"]] = 1\n",
     "        \n",
-    "        dttm_col = tmp.apply(lambda row: structure_date_from_parts(row, row.name, dttm_elems, dttm_pattern), axis=1)\n",
+    "        dttm_col = tmp.apply(lambda row: structure_dttm_from_parts(row, dttm_elems, dttm_pattern), axis=1)\n",
     "        \n",
     "    else:\n",
     "        # Need to provide the default parameter to parser.parse so that missing entries don't default to current date\n",
